== In Git

=== Bugfixes
* Superfluous space after step_keyword value in snippet_text message (#679 Aslak Hellesøy)
* Better Handling for "announce" in HTML formatter (#676 Stephen Kennedy)
* Too many open files - getcwd (#666 Aslak Hellesøy)

=== New Features
* Performance degradation when running feature files with over 1000 steps (#675 Dimitri Geshef)

== 0.9.3 (2010-10-24)

=== Bugfixes
* Better JSON representation of Regexps (Aslak Hellesøy)
* Update to work with latest spork (Matt Wynne)
* Prevent MiniTest::Unit#autorun from running in at_exit hook. (Aslak Hellesøy) 
* Fixed incorect --help for --strict. It fails on both pending and undefined. (Aslak Hellesøy)

== 0.9.2 (2010-10-04)

=== Bugfixes
* Too many open files - getcwd (#666 Aslak Hellesøy)

== 0.9.1 (2010-10-02)

=== Bugfixes
* Just a minor internal change to make Cuke4Duke happy. (Aslak Hellesøy)

== 0.9.0 (2010-09-21)

Maintenance release for the new release of Gherkin 2.2.3.

=== Bugfixes
* Compatibility with rspec-2.0.0.beta.19 mocks (Aslak Hellesøy)
* JUnit formatter now puts output in CDATA sections. (Dmitry Amelchenko)

=== New features
* --dry-run now shows snippets (Ben Hall)
* Use Bundler for dependency management. (Aslak Hellesøy, Rob Hunter)

=== Removed features
* No more Jeweler

=== Internal changes
* Big refactoring of StepMother (Matt Wynne)

== 0.8.5 (2010-07-14)

=== Bugfixes
* Location of stepdefs outside the project (in gems) are reported incorrectly. (#583 Aslak Hellesøy)
* Cucumber::Rake::Task uses 'bundle exec' when using bundler (#626 John Firebaugh)

== 0.8.4 (2010-07-12)

=== Bugfixes
* Fix "Errno::EADDRNOTAVAIL" errors that may be received with spork on Snow Leopard. (Lucas Mundim)

=== New features
* Detect limit for negative tags (#636 Aslak Hellesøy)
* Support for RSpec 2 doubles (mocks and stubs) (Aslak Hellesøy)

== 0.8.3 (2010-06-16)

Just a quick bugfix release.

=== Bugfixes
* Scenario outlines that fail with exception exit process (Aslak Hellesøy)
